--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,6 @@ a:link{
 a:visited{
     color: #ffffff;
 }
-
-.bodyimg{
-    position: absolute;
-}
 .bodyimg p{
     color:#f7f2f2;
     font-size: 55px;
@@ -35,6 +31,7 @@ a:visited{
     top:10%;
     left:50%;
     transform: translate(-50%,-50%);
+    text-align: center;
 }
 .bodyimg h3{
     color:#f7f2f2;
@@ -44,7 +41,9 @@ a:visited{
     position: absolute;
     top:40%;
     left:80%;
-    transform: translate(-40%, -40%);
+    transform: translate(-80%, -40%);
+    width: 90%;
+    text-align: center;
 }
 .grid{
     display: flex;
